--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --second-color: #0b2441;
     --main-color: #0b2441;
-    /*#007bff;*/
+    --blue: #007bff;
     --red: #e74c3c;
     --green: #3AA346;
     --yellow: #ffc701;
@@ -49,7 +49,7 @@ body {
     position: fixed;
     z-index: 10;
     width: 100%;
-    padding: 1rem;
+    padding: .5rem;
 }
 
 .header .logo {
@@ -125,29 +125,30 @@ body {
 }
 
 .header .nav a:hover {
-    color: var(--yellow);
+    color: var(--blue);
 }
 
-.header .profile {
+.header .user-btn{
     display: flex;
     align-items: center;
     position: relative;
     margin-left: auto;
-    justify-content: flex-end;
+    align-items: center;
+    justify-content: center;
 }
 
-.header .profile a {
-    font-size: 1rem;
-    padding: 0 1rem;
-    color: var(--light-color);
-    transition: .3s linear;
+.header .user-btn-icon{
+    display: flex;
+    font-size: 1.3rem;
+    padding: 1rem;
+    justify-content: center;
+    align-items: center;
+    transition: .2s linear;
 }
 
-.header .profile a:hover {
-    color: var(--yellow);
-}
 
-.header .profilei {
+
+.header .profile {
     position: absolute;
     top: 120%;
     right: 1rem;
@@ -160,11 +161,11 @@ body {
     transition: .2s linear;
 }
 
-.header .profilei.active {
+.header .profile.active {
     transform: scale(1);
 }
 
-.header .profilei img {
+.header .profile img{
     height: 5rem;
     width: 5rem;
     border-radius: 50%;
@@ -172,12 +173,12 @@ body {
     margin-bottom: .5rem;
 }
 
-.header .profilei h3 {
+.header .profile h3{
     font-size: 1rem;
     color: var(--black);
 }
 
-.header .profilei span {
+.header .profile span {
     color: var(--light-color);
     font-size: 1rem;
 }
@@ -348,7 +349,7 @@ body {
 }
 
 .card:hover {
-    transform: scale(1.15);
+    transform: scale(1.08);
 }
 
 .card-icon {
@@ -425,7 +426,7 @@ body {
     cursor: pointer;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin: 1rem;
-    padding: 1rem;
+    padding: .6rem;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -434,7 +435,7 @@ body {
 }
 
 .box:hover {
-    transform: scale(1.09);
+    transform: scale(1.08);
 }
 
 .box h3 {
@@ -835,7 +836,6 @@ footer {
 .features-box {
     background: white;
     border-radius: 1.5rem;
-    cursor: pointer;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin: auto;
     gap: 1rem;
@@ -848,14 +848,331 @@ footer {
     transition: .2s linear;
 }
 
-.features-box:hover{
-    color: #007bff;;
-}
-
 .features-box img{
     height: 10rem;
     object-fit: contain;
 }
+
+/*buttons*/
+.btn, .option-btn, .delete-btn, .inline-btn, .inline-option-btn, .inline-delete-btn{
+    border-radius: .5rem;
+    padding: .5rem;
+    font-size: 1rem;
+    color: var(--white);
+    text-transform: capitalize;
+    cursor: pointer;
+    margin-top: .5rem;
+    text-align: center;
+}
+
+.btn, .option-btn, .delete-btn{
+    display: block;
+    border-radius: 2rem;
+    width: 100%;
+}
+
+.inline-btn, .inline-option-btn, .inline-delete-btn{
+    display: inline-block;
+    border-radius: 26px;
+}
+
+.btn, .inline-btn{
+    background-color: var(--main-color);
+}
+
+.option-btn, .inline-option-btn{
+    background-color: var(--blue);
+}
+
+.delete-btn, .inline-delete-btn{
+    background-color: var(--red);
+
+}
+
+.btn:hover, .option-btn:hover, .delete-btn:hover, .inline-btn:hover, .inline-option-btn:hover, .inline-delete-btn:hover{
+    background-color: var(--black);
+    color: var(--white);
+}
+
+.flex-btn{
+    display: flex;
+}
+
+/*form container*/
+
+.form-container{
+    display: flex;
+    background-image: url(./image/whitebg.jpg);
+    height: 100%;
+    padding-top: 4rem;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    min-height: calc(100vh - 20rem);
+}
+
+.form-container form{
+    background-color: var(--main-color);
+    opacity: 0.9;
+    border-radius: .5rem;
+    padding: 1rem;
+    width: 25rem;
+}
+
+.form-btn{
+    background-color: var(--yellow);
+    display: block;
+    border-radius: .5rem;
+    padding: .5rem;
+    font-size: 1rem;
+    color: black;
+    text-transform: capitalize;
+    cursor: pointer;
+    margin-top: .5rem;
+    text-align: center;
+    border-radius: 2rem;
+    width: 100%;
+}
+
+.form-btn:hover{
+    background-color: var(--blue);
+    color: var(--white);
+}
+
+.form-container form h3{
+    text-align: center;
+    font-size: 1.5rem;
+    color: var(--white);
+    margin-bottom: .5rem;
+
+}
+
+.form-container form p{
+    font-size: 1.3rem;
+    color: var(--white);
+}
+
+
+.form-container form p span{
+    color: var(--red);
+}
+
+.form-container form .box{
+    width: 100%;
+    border-radius: .5rem;
+    margin: 1rem 0;
+    font-size: 1.2rem;
+    color: var(--black);
+    padding: .6rem;
+    background-color: var(--white);
+}
+
+.form-box {
+    background: white;
+    border-radius: .5rem;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin: 1rem 0;
+    width: 100%;
+    padding: .6rem;
+    position: relative;
+    color: black;
+    transition: .2s linear;
+}
+
+.form-container img{
+    height: 30rem;
+}
+
+/*chatbot section*/
+.chatbot-toggler {
+  position: fixed;
+  bottom: 30px;
+  z-index: 100;
+  right: 35px;
+  outline: none;
+  border: none;
+  height: 50px;
+  width: 50px;
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: var(--yellow);
+  transition: all 0.2s ease;
+}
+body.show-chatbot .chatbot-toggler {
+  transform: rotate(90deg);
+}
+.chatbot-toggler span {
+  color: #fff;
+  position: absolute;
+}
+.chatbot-toggler span:last-child,
+body.show-chatbot .chatbot-toggler span:first-child  {
+  opacity: 0;
+}
+body.show-chatbot .chatbot-toggler span:last-child {
+  opacity: 1;
+}
+.chatbot {
+  position: fixed;
+  right: 35px;
+  bottom: 90px;
+  z-index: 100;
+  width: 420px;
+  background: #fff;
+  border-radius: 15px;
+  overflow: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transform: scale(0.5);
+  transform-origin: bottom right;
+  box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
+              0 32px 64px -48px rgba(0,0,0,0.5);
+  transition: all 0.1s ease;
+}
+body.show-chatbot .chatbot {
+  opacity: 1;
+  pointer-events: auto;
+  z-index: 100;
+  transform: scale(1);
+}
+.chatbot header {
+  padding: 16px 0;
+  position: relative;
+  text-align: center;
+  color: #fff;
+  background: #724ae8;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
+.chatbot header span {
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  display: none;
+  cursor: pointer;
+  transform: translateY(-50%);
+}
+header h2 {
+  font-size: 1.4rem;
+}
+.chatbot .chatbox {
+  overflow-y: auto;
+  height: 510px;
+  padding: 30px 20px 100px;
+}
+.chatbot :where(.chatbox, textarea)::-webkit-scrollbar {
+  width: 6px;
+}
+.chatbot :where(.chatbox, textarea)::-webkit-scrollbar-track {
+  background: #fff;
+  border-radius: 25px;
+}
+.chatbot :where(.chatbox, textarea)::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 25px;
+}
+.chatbox .chat {
+  display: flex;
+  list-style: none;
+  z-index: 100;
+}
+.chatbox .outgoing {
+  margin: 20px 0;
+  justify-content: flex-end;
+}
+.chatbox .incoming span {
+  width: 32px;
+  height: 32px;
+  color: #fff;
+  cursor: default;
+  text-align: center;
+  line-height: 32px;
+  align-self: flex-end;
+  background: #724ae8;
+  border-radius: 4px;
+  margin: 0 10px 7px 0;
+}
+.chatbox .chat p {
+  white-space: pre-wrap;
+  padding: 12px 16px;
+  border-radius: 10px 10px 0 10px;
+  max-width: 75%;
+  color: #fff;
+  font-size: 0.95rem;
+  background: #724ae8;
+}
+.chatbox .incoming p {
+  border-radius: 10px 10px 10px 0;
+}
+.chatbox .chat p.error {
+  color: #721c24;
+  background: #f8d7da;
+}
+.chatbox .incoming p {
+  color: #000;
+  background: #f2f2f2;
+}
+.chatbot .chat-input {
+  display: flex;
+  gap: 5px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: #fff;
+  padding: 3px 20px;
+  border-top: 1px solid #ddd;
+}
+.chat-input textarea {
+  height: 55px;
+  width: 100%;
+  border: none;
+  outline: none;
+  resize: none;
+  max-height: 180px;
+  padding: 15px 15px 15px 0;
+  font-size: 0.95rem;
+}
+.chat-input span {
+  align-self: flex-end;
+  color: #724ae8;
+  cursor: pointer;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  visibility: hidden;
+  font-size: 1.35rem;
+}
+.chat-input textarea:valid ~ span {
+  visibility: visible;
+}
+
+@media (max-width: 490px) {
+  .chatbot-toggler {
+    right: 20px;
+    bottom: 20px;
+  }
+  .chatbot {
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    border-radius: 0;
+    width: 100%;
+  }
+  .chatbot .chatbox {
+    height: 90%;
+    padding: 25px 15px 100px;
+  }
+  .chatbot .chat-input {
+    padding: 5px 15px;
+  }
+  .chatbot header span {
+    display: block;
+  }
+}
+
 
 @media (max-width:1200px) {}
 
