--- a/style.css
+++ b/style.css
@@ -1227,6 +1227,7 @@ header h2 {
 
 .playlist .row .col{
     flex: 1 1 40rem;
+    text-align: justify;
 }
 
 .playlist .row .col .save-list button{
@@ -1273,7 +1274,7 @@ header h2 {
 
 .playlist .row .col .thumb img{
     width: 100%;
-    height: 100%;
+    height: 90%;
     border-radius: .5rem;
     object-fit: cover;
 }
@@ -1330,7 +1331,7 @@ header h2 {
 
 .playlist .row .col .details p{
     padding: 1rem 0;
-    line-height: 2;
+    line-height: 1.4;
     color: var(--light-color);
     font-size: 1.7rem;
 }
@@ -1398,6 +1399,200 @@ header h2 {
 
 .videos-container .box-container .box:hover h3{
     color: var(--main-color);
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     transition: .3s linear;
+}
+
+/* watch video */
+
+.watch-video{
+    padding: 2rem;
+}
+
+
+.watch-video .video-details{
+    padding: 2rem;
+    background-color: var(--white);
+}
+
+.watch-video .video-details .video{
+    width: 100%;
+    border-radius: .5rem;
+}
+
+.watch-video .video-details .title{
+    font-size: 2rem;
+    color: var(--black);
+    padding: 1.5rem 0;
+}
+
+.watch-video .video-details .info{
+    display: flex;
+    gap: 2rem;
+    padding-bottom: 1.5rem;
+    border-bottom: var(--border);
+
+}
+
+.watch-video .video-details .info p{
+    font-size: 1.6rem;
+}
+
+.watch-video .video-details .info p i{
+    margin-right: 1rem;
+    color: var(--main-color);
+}
+
+.watch-video .video-details .info span{
+    color: var(--light-color);
+}
+
+.watch-video .video-details .tutor{
+    padding: 2rem 0;
+    display: flex;
+    align-items: center;
+}
+
+.watch-video .video-details .tutor img{
+    height: 7rem;
+    width: 7rem;
+    margin-right: 2rem;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.watch-video .video-details .tutor h3{
+    font-size: 2rem;
+    color: var(--black);
+    margin-bottom: .2rem;
+}
+
+.watch-video .video-details .tutor span{
+    color: var(--light-color);
+    font-size: 1.5rem;
+}
+
+.watch-video .video-details .flex{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    justify-content: space-between;
+}
+
+.watch-video .video-details .flex a{
+    margin-top: 0;
+}
+
+.watch-video .video-details .flex button{
+    background-color: var(--light-bg);
+    cursor: pointer;
+    padding: 0.6rem 2.5rem;
+    font-size: 1.5rem;
+}
+
+.watch-video .video-details .flex button i{
+    color: var(--black);
+    margin-right: 1rem;
+}
+
+.watch-video .video-details .flex button span{
+    color: var(--light-color);
+}
+
+.watch-video .video-details .flex button:hover{
+    background-color: var(--black);
+}
+
+.watch-video .video-details .flex button:hover i{
+    color: var(--white);
+}
+
+.watch-video .video-details .flex button:hover span{
+    color: var(--white);
+}
+
+.watch-video .video-details .description{
+    padding: 2rem;
+}
+
+.watch-video .video-details .description p{
+    line-height: 1.5rem;
+    font-size: 1.7rem;
+    color: var(--light-color);
+    white-space: pre-line;
+}
+
+/* comments on video */
+.comments .add-comment{
+    background-color: var(--white);
+    border-radius: .5rem;
+    margin-bottom: 2rem;
+    padding: 2rem;
+}
+
+.comments .add-comment textarea{
+    border-radius: .5rem;
+    padding: 1.4rem;
+    width: 100%;
+    height: 25rem;
+    background-color: var(--light-bg);
+    resize: none;
+    font-size: 1.8rem;
+    color: var(--black);
+}
+
+.comments .show-comments{
+    background-color: var(--white);
+    border-radius: .5rem;
+    padding: 2rem;
+    display: grid;
+    gap: 2.5rem;
+}
+
+
+.comments .show-comments .user{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    margin-bottom: 2rem;
+}
+
+.comments .show-comments .user img{
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.comments .show-comments .user h3{
+    font-size: 2rem;
+    color: var(--black);
+    margin-bottom: .2rem;
+}
+
+.comments .show-comments .user span{
+    color: var(--light-color);
+    font-size: 1.5rem;
+}
+
+.comments .show-comments .text{
+    border-radius: .5rem;
+    background-color: var(--light-bg);
+    padding: 1rem 1.5rem;
+    color: var(--black);
+    margin: .5rem 0;
+    position: relative;
+    z-index: 0;
+    white-space: pre-line;                                   /*important*/
+    font-size: 1.8rem;
+}
+
+.comments .show-comments .text::before{
+    content: '';                                            /*important*/
+    position: absolute;
+    top: -1rem; left: 1.5rem;
+    height: 1.2rem;
+    width: 2rem;
+    background-color: var(--light-bg);
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);         /*important*/
 }
