--- a/style.css
+++ b/style.css
@@ -1828,3 +1828,222 @@ hr{
     background-image: url(./image/whitebg.jpg);
     padding-top: 6rem;
 }
+
+/*chat section starts*/
+
+.avatar {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.avatar img,
+.chat-avatar img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.chat-header-right i{
+    font-size: 1.8rem;
+    margin: 5px 13px;
+    color: var(--white);
+}
+
+.chat-section {
+    display: flex;
+    overflow: hidden;
+}
+
+.sidebar {
+    flex: 5.17;
+}
+
+.header2 {
+    background-color: var(--main-color);
+    display: flex;
+    color: var(--white);
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 15px;
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.sidebar-search {
+    display: flex;
+    align-items: center;
+    background-color: #f6f6f6;
+    padding: 8px 15px;
+}
+
+.sidebar-search-container {
+    display: flex;
+    align-items: center;
+    background-color: white;
+    width: 100%;
+    height: 35px;
+    border-radius: 20px;
+}
+
+.sidebar-search-container img {
+    width: 15px;
+    height: 15px;
+    margin: 0 15px;
+    opacity: 0.4;
+}
+
+.sidebar-search-container input {
+    border: none;
+    outline: none;
+    margin-left: 20px;
+}
+
+.chat-avatar {
+    position: relative;
+    height: 50px;
+    min-width: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    flex: 1;
+}
+
+.sidebar-chats {
+    height: calc(100vh - 115px);
+    overflow-y: scroll;
+}
+
+.sidebar-chat {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 10px 12px;
+    width: 100%;
+}
+
+.sidebar-chat:hover {
+    background-color: #f5f5f5;
+}
+
+.sidebar-chat:nth-child(2) {
+    background-color: #ebebeb;
+}
+
+.sidebar-chat::before {
+    content: '';
+    position: absolute;
+    width: 80%;
+    bottom: 0;
+    left: 80px;
+    border-bottom: 1px solid #999;
+    opacity: 0.2;
+}
+
+.chat-info {
+    margin-left: 15px;
+    flex: 10;
+    text-align: start;
+}
+
+.chat-info p {
+    font-size: 13px;
+    line-height: 20px;
+    color: gray;
+}
+
+.time {
+    flex: 1;
+}
+
+.time p {
+    white-space: nowrap;
+    font-size: 13px;
+    margin-top: -16px;
+    color: gray;
+}
+
+
+/* Message Content */
+
+.message-container {
+    flex: 12;
+}
+
+.chat-title {
+    display: flex;
+    align-items: center;
+}
+
+.message-header-content {
+    margin-left: 15px;
+}
+
+.chat-info h4 {                            /**/
+    font-weight: 400;
+}
+
+.message-header-content p {
+    font-size: 13px;
+    color: gray;
+}
+
+.message-content {
+    background-image: url(./image/whitebg.jpg);
+    background-position: center;
+    height: calc(100vh - 120px);
+    padding: 20px 80px;
+    overflow-y: scroll;
+}
+
+.chat-message {
+    font-size: 14px;
+    padding: 8px 10px;
+    width: fit-content;
+    border-radius: 8px;
+    background-color: white;
+    margin-bottom: 30px;
+}
+
+.chat-sent {
+    margin-left: auto;
+    background-color: #dcf8c6;
+}
+
+.chat-timestamp {
+    margin-left: 10px;
+    font-size: 10px;
+    color: grey;
+}
+
+
+/* message footer */
+
+.message-footer {
+    display: flex;
+    align-items: center;
+    padding: 5px 10px;
+    background-color: #f0f0f0;
+}
+
+.message-footer img {
+    flex: 1;
+    width: 22px;
+    height: 22px;
+    opacity: 0.4;
+}
+
+.message-footer input {
+    flex: 20;
+    margin: 5px 10px;
+    padding: 12px 15px;
+    outline: none;
+    border: none;
+    border-radius: 20px;
+    font-size: 15px;
+}
+/*chat section ends*/
